# stock-select

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
diagnostics/b2_review_layer/: env_skeleton_top1_report.json  env_skeleton_top1_report.md  environment_comparisons.json  factor_segments.json  features.csv  (+45 more)
docs/: .gitignore  README.md  architecture.md  model.md  roadmap.md  screening-methods.md  workflow.md
examples/: compare_local_factors.rs
ml/: __main__.py  cli.py  dates.py  env.py  paths.py  subprocesses.py
scripts/: b2_neutral_gate_box_analysis.py  b2_review_layer_diagnostics.py  b2_weak_analysis.py  backfill_baseline_reviews.py  backfill_run.py  backfill_samples.py  check_charts.py  compare_review.py  compare_screen.py  convert_prepared_cache_v2.py  dribull_tuning_diagnostics.py  environment_tuning_diagnostics.py  install.sh  left_peak_collect_samples.py  macd_state_machine_review.py  macd_wave_score_review.py  model_maintenance.sh  prepared_cache_benchmark.py  render_charts.py  review_top3_stats.py  review_top3_win_stats.py  review_tuning_attach_environment.py  review_tuning_backfill_environment_history.py  review_tuning_collect.py  review_tuning_correlations.py  review_tuning_recommend.py  review_tuning_recompute_b1_current_policy.py  review_tuning_recompute_b2_baseline.py  review_tuning_segments.py  review_tuning_verify.py  score_tuning_diagnostics.py
src/: cache.rs  cli.rs  config.rs  db.rs  environment.rs  environment_profiles.rs  indicators.rs  intraday.rs  lib.rs  local_factors.rs  macd_trends.rs  main.rs  market_environment.rs  model.rs  native_chart.rs  native_review.rs  output.rs  prepare.rs  progress.rs  python_bridge.rs  record.rs  review_protocol.rs  review_types.rs  screening.rs  watch_pool.rs
tests/: analyze_symbol.rs  b1_review_scoring.rs  b1_reviewer_decision.rs  b1_reviewer_decision_golden.rs  b2_review_scoring.rs  b2_reviewer_golden.rs  cli_capability_guard.rs  cli_clean_intraday.rs  cli_review_flow.rs  cli_review_list.rs  cli_run.rs  cli_screen.rs  completions.rs  config.rs  custom_pool.rs  docs_contract.rs  engine_artifacts.rs  engine_b2.rs  engine_capability.rs  engine_inference.rs  engine_llm.rs  engine_logging.rs  engine_presentation.rs  engine_types.rs  environment.rs  intraday_cli.rs  intraday_snapshot.rs  market_environment.rs  native_review.rs  prepared_cache.rs  progress.rs  review_list.rs  review_merge.rs  review_phase1.rs  run_record.rs  screening.rs  screening_factor_parity.rs  test_b1_logic.py  test_b2_logic.py  test_b2_neutral_gate_box_analysis.py  (+60 more)
tests_py/: test_backfill_baseline_reviews.py  test_review_top3_win_stats.py
(+245 files in other folders)
