[project]
name = "stock-select"
version = "0.1.0"
description = "Standalone B1 stock screening and chart-review orchestration skill"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mplfinance>=0.12.10b0",
    "numpy>=2.4.0",
    "pandas>=3.0.0",
    "psycopg[binary]>=3.2.0",
    "pyarrow>=20.0.0",
    "PyYAML>=6.0.0",
    "typer>=0.16.0",
    "tushare>=1.4.18",
]

[project.scripts]
stock-select = "stock_select.cli:main"

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
