[project]
name = "stock-select-ml"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "numpy",
  "lightgbm",
  "scikit-learn",
  "psycopg[binary]",
]

[project.optional-dependencies]
tuning = ["optuna"]

[project.scripts]
stock-select-ml = "ml.cli:entrypoint"

[tool.setuptools.packages.find]
include = ["ml*"]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
